# chain

./: .gitignore  Cargo.toml  docker-compose-redis.yml  docker-compose.yml
src/: main.rs
src/db/: connection.rs  utils.rs
src/db/migrations/: 000_user.sql  001_transactions.sql  002_blocks.sql  003_block_transaction.sql
src/errors/: types.rs
src/redis_utils/: connection.rs  mod.rs  redis_tx.rs  users.rs
src/types/: block.rs  db.rs  mod.rs  transaction.rs
src/utils/: byte.rs  merkel.rs  mod.rs
