[package]
name = "chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
k256 = {version = "0.11.4", features = ["ecdsa-core","sha256","ecdsa"]}
rs_merkle = "1.1"
rand = "0.8"
rand_core = {version = "0.6", features = ["getrandom"]}
redis = "0.21"
