[package]
name = "chain"
version = "0.1.0"
edition = "2021"
default-run = "chain"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
k256 = {version = "0.11.4", features = ["ecdsa-core","sha256","ecdsa"]}
rs_merkle = "1.1"
rand = "0.8"
rand_core = {version = "0.6", features = ["getrandom"]}
redis = "0.21"
serde = {version = "1.0", features = ["derive"]}
serde-big-array = "0.4.1"
dotenv = "0.15"
serde_json = "1"
hex = "0.4"
actix-web = "4.0"
sqlx = {version = " 0.5", features = ["runtime-actix-native-tls","postgres","chrono"]}
sqlx-pg-migrate = "1"
include_dir="0.7"